--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -285,371 +285,491 @@
      "text": [
       "(0, 1) (0, 3)\n",
       "2\n",
+      "2\n",
       "\n",
       "(3, 0) (0, 3)\n",
       "6\n",
+      "2\n",
       "\n",
       "(0, 1) (1, 0)\n",
+      "2\n",
       "2\n",
       "\n",
       "(3, 0) (1, 0)\n",
       "2\n",
+      "2\n",
       "\n",
       "(0, 1) (1, 2)\n",
+      "2\n",
       "2\n",
       "\n",
       "(3, 0) (1, 2)\n",
       "4\n",
+      "2\n",
       "\n",
       "(0, 1) (3, 3)\n",
+      "5\n",
       "5\n",
       "\n",
       "(3, 0) (3, 3)\n",
       "3\n",
+      "3\n",
       "\n",
       "(0, 1) (3, 4)\n",
+      "6\n",
       "6\n",
       "\n",
       "(3, 0) (3, 4)\n",
       "4\n",
+      "4\n",
       "\n",
       "(0, 1) (4, 3)\n",
       "6\n",
+      "6\n",
       "\n",
       "(3, 0) (4, 3)\n",
+      "4\n",
       "4\n",
       "\n",
       "\n",
       "(0, 1) (0, 3)\n",
       "2\n",
+      "2\n",
       "\n",
       "(4, 0) (0, 3)\n",
       "7\n",
+      "2\n",
       "\n",
       "(0, 1) (1, 0)\n",
+      "2\n",
       "2\n",
       "\n",
       "(4, 0) (1, 0)\n",
       "3\n",
+      "2\n",
       "\n",
       "(0, 1) (1, 2)\n",
+      "2\n",
       "2\n",
       "\n",
       "(4, 0) (1, 2)\n",
       "5\n",
+      "2\n",
       "\n",
       "(0, 1) (3, 3)\n",
+      "5\n",
       "5\n",
       "\n",
       "(4, 0) (3, 3)\n",
       "4\n",
+      "4\n",
       "\n",
       "(0, 1) (3, 4)\n",
+      "6\n",
       "6\n",
       "\n",
       "(4, 0) (3, 4)\n",
       "5\n",
+      "5\n",
       "\n",
       "(0, 1) (4, 3)\n",
       "6\n",
+      "6\n",
       "\n",
       "(4, 0) (4, 3)\n",
+      "3\n",
       "3\n",
       "\n",
       "\n",
       "(0, 1) (0, 3)\n",
       "2\n",
+      "2\n",
       "\n",
       "(4, 1) (0, 3)\n",
       "6\n",
+      "2\n",
       "\n",
       "(0, 1) (1, 0)\n",
+      "2\n",
       "2\n",
       "\n",
       "(4, 1) (1, 0)\n",
       "4\n",
+      "2\n",
       "\n",
       "(0, 1) (1, 2)\n",
+      "2\n",
       "2\n",
       "\n",
       "(4, 1) (1, 2)\n",
       "4\n",
+      "2\n",
       "\n",
       "(0, 1) (3, 3)\n",
+      "5\n",
       "5\n",
       "\n",
       "(4, 1) (3, 3)\n",
       "3\n",
+      "3\n",
       "\n",
       "(0, 1) (3, 4)\n",
+      "6\n",
       "6\n",
       "\n",
       "(4, 1) (3, 4)\n",
       "4\n",
+      "4\n",
       "\n",
       "(0, 1) (4, 3)\n",
       "6\n",
+      "6\n",
       "\n",
       "(4, 1) (4, 3)\n",
+      "2\n",
       "2\n",
       "\n",
       "\n",
       "(0, 1) (0, 3)\n",
       "2\n",
+      "2\n",
       "\n",
       "(4, 4) (0, 3)\n",
       "5\n",
+      "2\n",
       "\n",
       "(0, 1) (1, 0)\n",
+      "2\n",
       "2\n",
       "\n",
       "(4, 4) (1, 0)\n",
       "7\n",
+      "2\n",
       "\n",
       "(0, 1) (1, 2)\n",
+      "2\n",
       "2\n",
       "\n",
       "(4, 4) (1, 2)\n",
       "5\n",
+      "2\n",
       "\n",
       "(0, 1) (3, 3)\n",
       "5\n",
+      "5\n",
       "\n",
       "(4, 4) (3, 3)\n",
+      "2\n",
       "2\n",
       "\n",
       "(0, 1) (3, 4)\n",
       "6\n",
+      "6\n",
       "\n",
       "(4, 4) (3, 4)\n",
+      "1\n",
       "1\n",
       "\n",
       "(0, 1) (4, 3)\n",
       "6\n",
+      "6\n",
       "\n",
       "(4, 4) (4, 3)\n",
+      "1\n",
       "1\n",
       "\n",
       "\n",
       "(3, 0) (0, 3)\n",
       "6\n",
+      "6\n",
       "\n",
       "(4, 0) (0, 3)\n",
       "7\n",
+      "6\n",
       "\n",
       "(3, 0) (1, 0)\n",
+      "2\n",
       "2\n",
       "\n",
       "(4, 0) (1, 0)\n",
       "3\n",
+      "2\n",
       "\n",
       "(3, 0) (1, 2)\n",
+      "4\n",
       "4\n",
       "\n",
       "(4, 0) (1, 2)\n",
       "5\n",
+      "4\n",
       "\n",
       "(3, 0) (3, 3)\n",
+      "3\n",
       "3\n",
       "\n",
       "(4, 0) (3, 3)\n",
       "4\n",
+      "3\n",
       "\n",
       "(3, 0) (3, 4)\n",
+      "4\n",
       "4\n",
       "\n",
       "(4, 0) (3, 4)\n",
       "5\n",
+      "4\n",
       "\n",
       "(3, 0) (4, 3)\n",
       "4\n",
+      "4\n",
       "\n",
       "(4, 0) (4, 3)\n",
+      "3\n",
       "3\n",
       "\n",
       "\n",
       "(3, 0) (0, 3)\n",
       "6\n",
+      "6\n",
       "\n",
       "(4, 1) (0, 3)\n",
+      "6\n",
       "6\n",
       "\n",
       "(3, 0) (1, 0)\n",
       "2\n",
+      "2\n",
       "\n",
       "(4, 1) (1, 0)\n",
       "4\n",
+      "2\n",
       "\n",
       "(3, 0) (1, 2)\n",
+      "4\n",
       "4\n",
       "\n",
       "(4, 1) (1, 2)\n",
       "4\n",
+      "4\n",
       "\n",
       "(3, 0) (3, 3)\n",
+      "3\n",
       "3\n",
       "\n",
       "(4, 1) (3, 3)\n",
       "3\n",
+      "3\n",
       "\n",
       "(3, 0) (3, 4)\n",
+      "4\n",
       "4\n",
       "\n",
       "(4, 1) (3, 4)\n",
       "4\n",
+      "4\n",
       "\n",
       "(3, 0) (4, 3)\n",
       "4\n",
+      "4\n",
       "\n",
       "(4, 1) (4, 3)\n",
+      "2\n",
       "2\n",
       "\n",
       "\n",
       "(3, 0) (0, 3)\n",
       "6\n",
+      "6\n",
       "\n",
       "(4, 4) (0, 3)\n",
+      "5\n",
       "5\n",
       "\n",
       "(3, 0) (1, 0)\n",
       "2\n",
+      "2\n",
       "\n",
       "(4, 4) (1, 0)\n",
       "7\n",
+      "2\n",
       "\n",
       "(3, 0) (1, 2)\n",
+      "4\n",
       "4\n",
       "\n",
       "(4, 4) (1, 2)\n",
       "5\n",
+      "4\n",
       "\n",
       "(3, 0) (3, 3)\n",
       "3\n",
+      "3\n",
       "\n",
       "(4, 4) (3, 3)\n",
+      "2\n",
       "2\n",
       "\n",
       "(3, 0) (3, 4)\n",
       "4\n",
+      "4\n",
       "\n",
       "(4, 4) (3, 4)\n",
+      "1\n",
       "1\n",
       "\n",
       "(3, 0) (4, 3)\n",
       "4\n",
+      "4\n",
       "\n",
       "(4, 4) (4, 3)\n",
+      "1\n",
       "1\n",
       "\n",
       "\n",
       "(4, 0) (0, 3)\n",
       "7\n",
+      "7\n",
       "\n",
       "(4, 1) (0, 3)\n",
+      "6\n",
       "6\n",
       "\n",
       "(4, 0) (1, 0)\n",
       "3\n",
+      "3\n",
       "\n",
       "(4, 1) (1, 0)\n",
       "4\n",
+      "3\n",
       "\n",
       "(4, 0) (1, 2)\n",
+      "5\n",
       "5\n",
       "\n",
       "(4, 1) (1, 2)\n",
       "4\n",
+      "4\n",
       "\n",
       "(4, 0) (3, 3)\n",
+      "4\n",
       "4\n",
       "\n",
       "(4, 1) (3, 3)\n",
       "3\n",
+      "3\n",
       "\n",
       "(4, 0) (3, 4)\n",
+      "5\n",
       "5\n",
       "\n",
       "(4, 1) (3, 4)\n",
       "4\n",
+      "4\n",
       "\n",
       "(4, 0) (4, 3)\n",
       "3\n",
+      "3\n",
       "\n",
       "(4, 1) (4, 3)\n",
+      "2\n",
       "2\n",
       "\n",
       "\n",
       "(4, 0) (0, 3)\n",
       "7\n",
+      "7\n",
       "\n",
       "(4, 4) (0, 3)\n",
+      "5\n",
       "5\n",
       "\n",
       "(4, 0) (1, 0)\n",
       "3\n",
+      "3\n",
       "\n",
       "(4, 4) (1, 0)\n",
       "7\n",
+      "3\n",
       "\n",
       "(4, 0) (1, 2)\n",
+      "5\n",
       "5\n",
       "\n",
       "(4, 4) (1, 2)\n",
       "5\n",
+      "5\n",
       "\n",
       "(4, 0) (3, 3)\n",
+      "4\n",
       "4\n",
       "\n",
       "(4, 4) (3, 3)\n",
       "2\n",
+      "2\n",
       "\n",
       "(4, 0) (3, 4)\n",
+      "5\n",
       "5\n",
       "\n",
       "(4, 4) (3, 4)\n",
       "1\n",
+      "1\n",
       "\n",
       "(4, 0) (4, 3)\n",
       "3\n",
+      "3\n",
       "\n",
       "(4, 4) (4, 3)\n",
+      "1\n",
       "1\n",
       "\n",
       "\n",
       "(4, 1) (0, 3)\n",
       "6\n",
+      "6\n",
       "\n",
       "(4, 4) (0, 3)\n",
+      "5\n",
       "5\n",
       "\n",
       "(4, 1) (1, 0)\n",
       "4\n",
+      "4\n",
       "\n",
       "(4, 4) (1, 0)\n",
       "7\n",
+      "4\n",
       "\n",
       "(4, 1) (1, 2)\n",
+      "4\n",
       "4\n",
       "\n",
       "(4, 4) (1, 2)\n",
       "5\n",
+      "4\n",
       "\n",
       "(4, 1) (3, 3)\n",
+      "3\n",
       "3\n",
       "\n",
       "(4, 4) (3, 3)\n",
       "2\n",
+      "2\n",
       "\n",
       "(4, 1) (3, 4)\n",
+      "4\n",
       "4\n",
       "\n",
       "(4, 4) (3, 4)\n",
       "1\n",
+      "1\n",
       "\n",
       "(4, 1) (4, 3)\n",
       "2\n",
+      "2\n",
       "\n",
       "(4, 4) (4, 3)\n",
+      "1\n",
       "1\n",
       "\n",
       "\n",
@@ -699,8 +819,8 @@
     "            min_cc_dist = min(cc_list)\n",
     "            print(min_cc_dist)\n",
     "            print()\n",
-    "        \n",
-    "    city_distances.append(min_cc_dist)\n",
+    "        dist += min_cc_dist\n",
+    "    city_distances.append(dist)\n",
     "    print()\n",
     "    \n",
     "min_city_distance = min(city_distances)\n",
