--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,6 +240,40 @@
     "                dq.append((v, nd))\n",
     "                print(f\"dq : {dq}\")\n",
     "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(start, end):\n",
+    "    chk = [[False] * N for _ in range(N)]\n",
+    "    chk[start][0] = chk[0][start] = True\n",
+    "    \n",
+    "    ans_list = []\n",
+    "    dq = deque()\n",
+    "    dq.append((start, 0))\n",
+    "    #print(f\"start : {start},  end : {end},   d : 0,  ans_list : {ans_list}\")\n",
+    "    #print()   \n",
+    "    \n",
+    "    while dq:\n",
+    "        y, d = dq.popleft()\n",
+    "        #print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
+    "        \n",
+    "        if end == y:            \n",
+    "            ans_list.append(d) \n",
+    "            #print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
+    "            return ans_list\n",
+    "                   \n",
+    "        nd = d + 1        \n",
+    "        for v in friends_dict[y]:\n",
+    "            if not chk[y][v] and not chk[v][y]:\n",
+    "                chk[y][v] = chk[v][y] = True            \n",
+    "                dq.append((v, nd))\n",
+    "                #print(f\"dq : {dq}\")\n",
+    "        #print()"
    ]
   },
   {
@@ -292,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -306,18 +340,11 @@
       "dq : deque([(2, 1), (3, 1)])\n",
       "\n",
       "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(3, 1), (0, 2)])\n",
-      "dq : deque([(3, 1), (0, 2), (1, 2)])\n",
-      "dq : deque([(3, 1), (0, 2), (1, 2), (3, 2)])\n",
+      "dq : deque([(3, 1), (1, 2)])\n",
+      "dq : deque([(3, 1), (1, 2), (3, 2)])\n",
       "\n",
       "y : 3,  d : 1,  ans_list : []\n",
-      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2)])\n",
-      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2)])\n",
-      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2), (4, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3)])\n",
-      "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3), (3, 3)])\n",
+      "dq : deque([(1, 2), (3, 2), (4, 2)])\n",
       "\n",
       "y : 1,  d : 2,  ans_list : []\n",
       "y : 1,  d : 2,  ans_list : [2]\n"
@@ -329,7 +356,7 @@
        "[2]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,9 +389,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start : 0,  end : 1,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 0,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "dq : deque([(2, 1), (3, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "dq : deque([(3, 1), (1, 2)])\n",
+      "dq : deque([(3, 1), (1, 2), (3, 2)])\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "dq : deque([(1, 2), (3, 2), (4, 2)])\n",
+      "\n",
+      "y : 1,  d : 2,  ans_list : []\n",
+      "y : 1,  d : 2,  ans_list : [2]\n",
+      "start : 0,  end : 2,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 0,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "dq : deque([(2, 1), (3, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "y : 2,  d : 1,  ans_list : [1]\n",
+      "start : 0,  end : 3,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 0,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "dq : deque([(2, 1), (3, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "dq : deque([(3, 1), (1, 2)])\n",
+      "dq : deque([(3, 1), (1, 2), (3, 2)])\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "y : 3,  d : 1,  ans_list : [1]\n",
+      "start : 0,  end : 4,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 0,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "dq : deque([(2, 1), (3, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "dq : deque([(3, 1), (1, 2)])\n",
+      "dq : deque([(3, 1), (1, 2), (3, 2)])\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "dq : deque([(1, 2), (3, 2), (4, 2)])\n",
+      "\n",
+      "y : 1,  d : 2,  ans_list : []\n",
+      "\n",
+      "y : 3,  d : 2,  ans_list : []\n",
+      "\n",
+      "y : 4,  d : 2,  ans_list : []\n",
+      "y : 4,  d : 2,  ans_list : [2]\n",
+      "start : 1,  end : 0,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 1,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "dq : deque([(0, 2)])\n",
+      "dq : deque([(0, 2), (3, 2)])\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "y : 0,  d : 2,  ans_list : [2]\n",
+      "start : 1,  end : 2,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 1,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "y : 2,  d : 1,  ans_list : [1]\n",
+      "start : 1,  end : 3,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 1,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "dq : deque([(0, 2)])\n",
+      "dq : deque([(0, 2), (3, 2)])\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "dq : deque([(3, 2), (3, 3)])\n",
+      "\n",
+      "y : 3,  d : 2,  ans_list : []\n",
+      "y : 3,  d : 2,  ans_list : [2]\n",
+      "start : 1,  end : 4,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 1,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "dq : deque([(0, 2)])\n",
+      "dq : deque([(0, 2), (3, 2)])\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "dq : deque([(3, 2), (3, 3)])\n",
+      "\n",
+      "y : 3,  d : 2,  ans_list : []\n",
+      "dq : deque([(3, 3), (4, 3)])\n",
+      "\n",
+      "y : 3,  d : 3,  ans_list : []\n",
+      "\n",
+      "y : 4,  d : 3,  ans_list : []\n",
+      "y : 4,  d : 3,  ans_list : [3]\n",
+      "start : 2,  end : 0,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 2,  d : 0,  ans_list : []\n",
+      "dq : deque([(1, 1)])\n",
+      "dq : deque([(1, 1), (3, 1)])\n",
+      "\n",
+      "y : 1,  d : 1,  ans_list : []\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "dq : deque([(0, 2)])\n",
+      "dq : deque([(0, 2), (4, 2)])\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "y : 0,  d : 2,  ans_list : [2]\n",
+      "start : 2,  end : 1,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 2,  d : 0,  ans_list : []\n",
+      "dq : deque([(1, 1)])\n",
+      "dq : deque([(1, 1), (3, 1)])\n",
+      "\n",
+      "y : 1,  d : 1,  ans_list : []\n",
+      "y : 1,  d : 1,  ans_list : [1]\n",
+      "start : 2,  end : 3,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 2,  d : 0,  ans_list : []\n",
+      "dq : deque([(1, 1)])\n",
+      "dq : deque([(1, 1), (3, 1)])\n",
+      "\n",
+      "y : 1,  d : 1,  ans_list : []\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "y : 3,  d : 1,  ans_list : [1]\n",
+      "start : 2,  end : 4,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 2,  d : 0,  ans_list : []\n",
+      "dq : deque([(1, 1)])\n",
+      "dq : deque([(1, 1), (3, 1)])\n",
+      "\n",
+      "y : 1,  d : 1,  ans_list : []\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "dq : deque([(0, 2)])\n",
+      "dq : deque([(0, 2), (4, 2)])\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "\n",
+      "y : 4,  d : 2,  ans_list : []\n",
+      "y : 4,  d : 2,  ans_list : [2]\n",
+      "start : 3,  end : 0,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 3,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "dq : deque([(2, 1), (4, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "dq : deque([(4, 1), (0, 2)])\n",
+      "dq : deque([(4, 1), (0, 2), (1, 2)])\n",
+      "\n",
+      "y : 4,  d : 1,  ans_list : []\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "y : 0,  d : 2,  ans_list : [2]\n",
+      "start : 3,  end : 1,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 3,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "dq : deque([(2, 1), (4, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "dq : deque([(4, 1), (0, 2)])\n",
+      "dq : deque([(4, 1), (0, 2), (1, 2)])\n",
+      "\n",
+      "y : 4,  d : 1,  ans_list : []\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "\n",
+      "y : 1,  d : 2,  ans_list : []\n",
+      "y : 1,  d : 2,  ans_list : [2]\n",
+      "start : 3,  end : 2,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 3,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "dq : deque([(2, 1), (4, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "y : 2,  d : 1,  ans_list : [1]\n",
+      "start : 3,  end : 4,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 3,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "dq : deque([(2, 1), (4, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "dq : deque([(4, 1), (0, 2)])\n",
+      "dq : deque([(4, 1), (0, 2), (1, 2)])\n",
+      "\n",
+      "y : 4,  d : 1,  ans_list : []\n",
+      "y : 4,  d : 1,  ans_list : [1]\n",
+      "start : 4,  end : 0,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 4,  d : 0,  ans_list : []\n",
+      "dq : deque([(3, 1)])\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "dq : deque([(0, 2)])\n",
+      "dq : deque([(0, 2), (2, 2)])\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "y : 0,  d : 2,  ans_list : [2]\n",
+      "start : 4,  end : 1,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 4,  d : 0,  ans_list : []\n",
+      "dq : deque([(3, 1)])\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "dq : deque([(0, 2)])\n",
+      "dq : deque([(0, 2), (2, 2)])\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "dq : deque([(2, 2), (2, 3)])\n",
+      "\n",
+      "y : 2,  d : 2,  ans_list : []\n",
+      "dq : deque([(2, 3), (1, 3)])\n",
+      "\n",
+      "y : 2,  d : 3,  ans_list : []\n",
+      "\n",
+      "y : 1,  d : 3,  ans_list : []\n",
+      "y : 1,  d : 3,  ans_list : [3]\n",
+      "start : 4,  end : 2,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 4,  d : 0,  ans_list : []\n",
+      "dq : deque([(3, 1)])\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "dq : deque([(0, 2)])\n",
+      "dq : deque([(0, 2), (2, 2)])\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "dq : deque([(2, 2), (2, 3)])\n",
+      "\n",
+      "y : 2,  d : 2,  ans_list : []\n",
+      "y : 2,  d : 2,  ans_list : [2]\n",
+      "start : 4,  end : 3,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 4,  d : 0,  ans_list : []\n",
+      "dq : deque([(3, 1)])\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "y : 3,  d : 1,  ans_list : [1]\n",
+      "[6, 8, 6, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kevin = []\n",
     "\n",
@@ -373,7 +672,7 @@
     "    for j in range(5):\n",
     "        if j == i:\n",
     "            continue\n",
-    "        sum += bfs(i, j)\n",
+    "        sum += bfs(i, j)[0]\n",
     "    kevin.append(sum)\n",
     "    \n",
     "print(kevin)\n",
